<resources>
    <string name="app_name">Time Management App</string>

    <!-- TEXT VIEWS -->
    <string name="welcome">Welcome! What would you like to do?</string>
    <string name="goal_title">Enter a Title:</string>
    <string name="goal_description">Enter a Description (optional):</string>
    <string name="select_category">Select a Category:</string>
    <string name="task_estimated_cost">Estimated Difficulty:</string>
    <string name="task_complete">Task Complete!</string>
    <string name="task_deadline">Enter a Deadline:</string>
    <string name="goalManagerInstructions">Goal Manager:\nTap on a Goal below to Edit,\nor Add a New Goal.</string>
    <string name="analyticsTitle">Past Week Analysis:</string>

    <!-- BUTTONS -->
    <string name="to_goal_manager">To Goal Manager</string>
    <string name="to_daily_checklist">To Daily Checklist</string>
    <string name="to_analytics_checklist">To Analytics</string>
    <string name="to_retrospective">To Retrospective</string>
    <string name="new_goal">Add New Goal</string>
    <string name="new_task">Add New Task</string>
    <string name="save">Save</string>

</resources>
