<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicco.timemanagementapp.fragments.EditGoalDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <TextView
            android:id="@+id/goalTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_title"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/goalTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="@integer/title_varchar_length"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/goalDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_description"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/goalDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="@integer/description_varchar_length"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/selectACategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
